[metadata]
name = pybluez-example
version = 0.5.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/pybluez-example
description = Examples of the versatile PyBluez module for Bluetooth from Python
keywords =
  bluetooth
  BlueZ
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: End Users
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: System :: Networking
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  pybluez

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
